--- a/Clinical_Algo/pom.xml
+++ b/Clinical_Algo/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<drools.version>7.49.0.Final</drools.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -44,12 +45,17 @@
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-core</artifactId>
-			<version>7.49.0.Final</version>
+			<version>${drools.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-compiler</artifactId>
-			<version>7.49.0.Final</version>
+			<version>${drools.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-decisiontables</artifactId>
+			<version>${drools.version}</version>
 		</dependency>
 	</dependencies>
 
