--- a/Clinical_Algo/src/main/resources/application.properties
+++ b/Clinical_Algo/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.security.user.name=admin
 spring.security.user.password=admin123
 spring.security.user.roles=USER
+logging.level.org.springframework=DEBUG
+logging.level.com.optum.Clinical_Algo=DEBUG
+server.port=9000
